[tool.poetry]
name = "happy-meter"
version = "0.0.0"
description = "Cognite Functions repo for calculating daylight hours"
authors = ["angelakdang@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
cognite-sdk = "^5"

[tool.poetry.dev-dependencies]
pytest = "^7"
pre-commit = "^2"

[tool.isort]
profile = "black"
force_single_line = false
atomic = true
lines_after_imports = 2
lines_between_types = 1
line_length = 120
known_third_party = ["cognite","pytest"]

[tool.black]
line-length = 120
